--- a/weather-app-react/.env
+++ b/weather-app-react/.env
@@ -1,2 +1,10 @@
 VITE_OPENWEATHERMAP_API_KEY="86652d0df8f0264b715007eb2255197c"
 VITE_OPENWEATHERMAP_BASE_URL="https://api.openweathermap.org/data/2.5/"
+
+VITE_FIREBASE_API_KEY=AIzaSyBuuxcE0gT2BfP4YVGc6rcFlvzosGjglMs
+VITE_FIREBASE_AUTH_DOMAIN=weather-ede41.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=weather-ede41
+VITE_FIREBASE_STORAGE_BUCKET=weather-ede41.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=484614496695
+VITE_FIREBASE_APP_ID=1:484614496695:web:6a01ced7b6f91880920832
+VITE_FIREBASE_MEASUREMENT_ID=G-C87Q5BBTJW
